--- a/hugo.yaml
+++ b/hugo.yaml
@@ -25,7 +25,7 @@ menu:
   - name: Posts
     pageRef: /posts
     url: /posts
-  - name: blog
+  - name: Blog
     pageRef: /blog
     url: /blog
   - name: About
