--- a/hugo.yaml
+++ b/hugo.yaml
@@ -42,3 +42,17 @@ sitemap:
   changefreq: monthly
   filename: sitemap.xml
   priority: 0.5
+
+markup:
+  highlight:
+    anchorLineNos: false
+    codeFences: true
+    guessSyntax: false
+    lineAnchors: ""
+    lineNoStart: 1
+    lineNos: false
+    lineNumbersInTable: true
+    noClasses: true
+    noHl: false
+    style: dracula 
+    tabWidth: 2
