--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           hugo \
             --minify \
+            --config hugo.yaml \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
